syntax = "proto2";

message Color {
   optional uint32 R = 1;
   optional uint32 G = 2;
   optional uint32 B = 3;
   optional uint32 A = 4;
}
message DrawCall {
   optional int32 EntityIndex = 1 [default = 0];
   optional int32 SpriteIndex = 2 [default = 0];
   optional double Depth = 4 [default = 0];
   optional Color Color = 5;
   optional bool FlipVertically = 6 [default = false];
   optional bool FlipHorizontally = 7 [default = false];
}
message StaticDrawCall {
   repeated int32 DrawCallIndices = 1;
   repeated Properties DrawCallProperties = 2;
}
message Frame {
   optional Rectangle CameraMovement = 2;
   repeated int32 DrawCallIndices = 4;
   repeated Properties DrawCallProperties = 5;
   repeated int32 StaticDrawCallIndices = 6;
}
message Properties {
   optional Vec2 Position = 1;
   optional float Angle = 2;
   optional Vec2 Scale = 3;
}
message Rectangle {
   optional Vec2 Position = 1;
   optional float Width = 2;
   optional float Height = 3;
}
message RuntimeTexture {
   optional int32 Width = 1;
   optional int32 Height = 2;
   optional bytes Data = 3;
}
message Replay {
   optional string Name = 1;
   repeated Sprite Sprites = 4;
   repeated DrawCall DrawCalls = 5;
   repeated Frame Frames = 6;
   repeated StaticDrawCall StaticDrawCalls = 7;
   repeated RuntimeTexture RuntimeTextures = 10;
}
message Sprite {
   optional string Texture = 1;
   optional uint32 Material = 2 [default = 0];
   optional Vec2 Center = 3;
   optional Rectangle TexCoords = 5;
   optional int32 RuntimeTextureIndex = 6 [default = -1];
}
message Vec2 {
   optional float X = 1;
   optional float Y = 2;
}